components/4.22.x/atom-component.md
Camel Components

# Atom

**Since Camel 1.2**

**Only consumer is supported**

The Atom component is used for polling Atom feeds.

Camel will poll the feed every 60 seconds by default.  
**Note:** The component currently only supports polling (consuming) feeds.

Maven users will need to add the following dependency to their `pom.xml` for this component:

```xml
<dependency>
    <groupId>org.apache.camel</groupId>
    <artifactId>camel-atom</artifactId>
    <version>x.x.x</version>
    <!-- use the same version as your Camel core version -->
</dependency>
```

## URI format

atom://atomUri\[?options\]

Where **atomUri** is the URI to the Atom feed to poll.

## Configuring Options

Camel components are configured on two separate levels:

-   component level
    
-   endpoint level
    

### Configuring Component Options

At the component level, you set general and shared configurations that are, then, inherited by the endpoints. It is the highest configuration level.

For example, a component may have security settings, credentials for authentication, urls for network connection and so forth.

Some components only have a few options, and others may have many. Because components typically have pre-configured defaults that are commonly used, then you may often only need to configure a few options on a component; or none at all.

You can configure components using:

-   the [Component DSL](../../manual/component-dsl.md).
    
-   in a configuration file (`application.properties`, `*.yaml` files, etc).
    
-   directly in the Java code.
    

### Configuring Endpoint Options

You usually spend more time setting up endpoints because they have many options. These options help you customize what you want the endpoint to do. The options are also categorized into whether the endpoint is used as a consumer (_from_), as a producer (_to_), or both.

Configuring endpoints is most often done directly in the endpoint URI as _path_ and _query_ parameters. You can also use the [Endpoint DSL](../../manual/Endpoint-dsl.md) and [DataFormat DSL](../../manual/dataformat-dsl.md) as a _type safe_ way of configuring endpoints and data formats in Java.

A good practice when configuring options is to use [Property Placeholders](../../manual/using-propertyplaceholder.md).

Property placeholders provide a few benefits:

-   They help prevent using hardcoded urls, port numbers, sensitive information, and other settings.
    
-   They allow externalizing the configuration from the code.
    
-   They help the code to become more flexible and reusable.
    

The following two sections list all the options, firstly for the component followed by the endpoint.

## Component Options

The Atom component supports the following options which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **bridgeErrorHandler** (consumer) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions (if possible) occurred while the Camel consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. Important: This is only possible if the 3rd party component allows Camel to be alerted if an exception was thrown. Some components handle this internally only, and therefore bridgeErrorHandler is not possible. In other situations we may improve the Camel component to hook into the 3rd party component and make this possible for future releases. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **autowiredEnabled** (advanced) | Whether autowiring is enabled. This is used for automatic autowiring options (the option must be marked as autowired) by looking up in the registry to find if there is a single instance of matching type, which then gets configured on the component. This can be used for automatic configuring JDBC data sources, JMS connection factories, AWS Clients, etc. | true | boolean |

## Endpoint Options

The Atom endpoint is configured using URI syntax:

atom:feedUri

With the following _path_ and _query_ parameters:

### Path Parameters

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **feedUri** (consumer) | **Required** The URI to the feed to poll. |  | String |

### Query Parameters

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **sendEmptyMessageWhenIdle** (consumer) | If the polling consumer did not poll any files, you can enable this option to send an empty message (no body) instead. | false | boolean |
| **sortEntries** (consumer) | Sets whether to sort entries by published date. Only works when splitEntries = true. | false | boolean |
| **splitEntries** (consumer) | Sets whether or not entries should be sent individually or whether the entire feed should be sent as a single message. | true | boolean |
| **throttleEntries** (consumer) | Sets whether all entries identified in a single feed poll should be delivered immediately. If true, only one entry is processed per delay. Only applicable when splitEntries = true. | true | boolean |
| **bridgeErrorHandler** (consumer (advanced)) | Allows for bridging the consumer to the Camel routing Error Handler, which mean any exceptions (if possible) occurred while the Camel consumer is trying to pickup incoming messages, or the likes, will now be processed as a message and handled by the routing Error Handler. Important: This is only possible if the 3rd party component allows Camel to be alerted if an exception was thrown. Some components handle this internally only, and therefore bridgeErrorHandler is not possible. In other situations we may improve the Camel component to hook into the 3rd party component and make this possible for future releases. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions, that will be logged at WARN or ERROR level and ignored. | false | boolean |
| **exceptionHandler** (consumer (advanced)) | To let the consumer use a custom ExceptionHandler. Notice if the option bridgeErrorHandler is enabled then this option is not in use. By default the consumer will deal with exceptions, that will be logged at WARN or ERROR level and ignored. |  | ExceptionHandler |
| **exchangePattern** (consumer (advanced)) | 
Sets the exchange pattern when the consumer creates an exchange.

Enum values:

-   InOnly
    
-   InOut
    





 |  | ExchangePattern |
| **pollStrategy** (consumer (advanced)) | A pluggable org.apache.camel.PollingConsumerPollingStrategy allowing you to provide your custom implementation to control error handling usually occurred during the poll operation before an Exchange have been created and being routed in Camel. |  | PollingConsumerPollStrategy |
| **feedHeader** (advanced) | Sets whether to add the feed object as a header. | true | boolean |
| **idempotent** (filter) | Option to use the Idempotent Consumer EIP pattern to let Camel skip already processed entries. By default it skips Atom entries that is older that the last read entry, using Atom updatedDate and publishedDate, but this strategy can be changed with the idempotentStrategy option. Idempotency only works when splitEntries = true. | true | boolean |
| **idempotentRepository** (filter) | A pluggable repository org.apache.camel.spi.IdempotentRepository which by default use MemoryIdempotentRepository if none is specified and idempotent is true. |  | IdempotentRepository |
| **idempotentStrategy** (filter (advanced)) | 

A pluggable strategy org.apache.camel.component.FeedIdempotentStrategy to use when checking idempotency. Camel provides two implementations out of the box: default and repository. The updated strategy is used as default if idempotent = true. The default strategy checks the Atom entrys updated or published date is newer than the previously read entry. You can provide your own implementation of the org.apache.camel.component.FeedIdempotentStrategy and refer to it using the # notation.

Enum values:

-   default
    
-   repository
    





 | default | AtomIdempotentStrategy |
| **backoffErrorThreshold** (scheduler) | The number of subsequent error polls (failed due some error) that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffIdleThreshold** (scheduler) | The number of subsequent idle polls that should happen before the backoffMultipler should kick-in. |  | int |
| **backoffMultiplier** (scheduler) | To let the scheduled polling consumer backoff if there has been a number of subsequent idles/errors in a row. The multiplier is then the number of polls that will be skipped before the next actual attempt is happening again. When this option is in use then backoffIdleThreshold and/or backoffErrorThreshold must also be configured. |  | int |
| **delay** (scheduler) | Milliseconds before the next poll. | 500 | long |
| **greedy** (scheduler) | If greedy is enabled, then the ScheduledPollConsumer will run immediately again, if the previous run polled 1 or more messages. | false | boolean |
| **initialDelay** (scheduler) | Milliseconds before the first poll starts. | 1000 | long |
| **repeatCount** (scheduler) | Specifies a maximum limit of number of fires. So if you set it to 1, the scheduler will only fire once. If you set it to 5, it will only fire five times. A value of zero or negative means fire forever. | 0 | long |
| **runLoggingLevel** (scheduler) | 

The consumer logs a start/complete log line when it polls. This option allows you to configure the logging level for that.

Enum values:

-   TRACE
    
-   DEBUG
    
-   INFO
    
-   WARN
    
-   ERROR
    
-   OFF
    





 | TRACE | LoggingLevel |
| **scheduledExecutorService** (scheduler) | Allows for configuring a custom/shared thread pool to use for the consumer. By default each consumer has its own single threaded thread pool. |  | ScheduledExecutorService |
| **scheduler** (scheduler) | To use a cron scheduler from either camel-spring or camel-quartz component. Use value spring or quartz for built in scheduler. | none | Object |
| **schedulerProperties** (scheduler) | To configure additional properties when using a custom scheduler or any of the Quartz, Spring based scheduler. This is a multi-value option with prefix: scheduler. |  | Map |
| **startScheduler** (scheduler) | Whether the scheduler should be auto started. | true | boolean |
| **timeUnit** (scheduler) | 

Time unit for initialDelay and delay options.

Enum values:

-   NANOSECONDS
    
-   MICROSECONDS
    
-   MILLISECONDS
    
-   SECONDS
    
-   MINUTES
    
-   HOURS
    
-   DAYS
    





 | MILLISECONDS | TimeUnit |
| **useFixedDelay** (scheduler) | Controls if fixed delay or fixed rate is used. See ScheduledExecutorService in JDK for details. | true | boolean |

## Message Headers

The Atom component supports the following message header(s), which is/are listed below:

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **CamelAtomFeed** (consumer) Constant: [`ATOM_FEED`](https://javadoc.io/doc/org.apache.camel/camel-atom/latest/org/apache/camel/component/atom/AtomConstants.html#ATOM_FEED) | When consuming the List object is set to this header. |  | List |

## Exchange data format

Camel will set the In body on the returned `Exchange` with the entries. Depending on the `splitEntries` flag Camel will either return one `Entry` or a `List<Entry>`.

  
| Option | Value | Behavior |
| --- | --- | --- |
| `splitEntries` | `true` | Only a single entry from the currently being processed feed is set: `exchange.in.body(Entry)` |
| `splitEntries` | `false` | The entire list of entries from the feed is set: `exchange.in.body(List<Entry>)` |

Camel can set the `Feed` object on the In header (see `feedHeader` option to disable this):

## Usage

### Avoid reading the same entry more than once (idempotent consumer)

Camel supports Idempotent Consumer directly within the component, so it will skip already processed entries. This feature is enabled by default, but can be disabled by setting the `idempotent=false` option.

-   Java
    
-   XML
    
-   YAML
    

```java
from("file://inbox?idempotent=false").to("...");
```

```xml
<route>
  <from uri="file://inbox?idempotent=false"/>
  <to uri="..."/>
</route>
```

```yaml
- route:
    from:
      uri: file://inbox
      parameters:
        idempotent: false
      steps:
        - to:
            uri: "..."
```

The default Idempotency strategy uses Atom published and updated timestamps to identify already read entries, by filtering all entries older that the _last read_ entry.

The idempotency strategy can be changed by setting the `idempotentStrategy` option. The components support two strategies _out-of-the-box_, but custom strategies can be used, by referencing a subclass of `org.apache.camel.component.atom.AtomIdempotentStrategy`, with Apache Camel’s # notation.

-   Java
    
-   XML
    
-   YAML
    

```java
from("file://inbox?idempotentStrategy=#myIdempotentStrategy").to("...");
```

```xml
<route>
  <from uri="file://inbox?idempotentStrategy=#myIdempotentStrategy"/>
  <to uri="..."/>
</route>
```

```yaml
- route:
    from:
      uri: file://inbox
      parameters:
        idempotentStrategy: "#myIdempotentStrategy"
      steps:
        - to:
            uri: "..."
```

#### Repository idempotent strategy

As an alternative to the default idempotent strategy, a repository based strategy can be use:

-   Java
    
-   XML
    
-   YAML
    

```java
from("file://inbox?idempotentStrategy=repository").to("...");
```

```xml
<route>
  <from uri="file://inbox?idempotentStrategy=repository"/>
  <to uri="..."/>
</route>
```

```yaml
- route:
    from:
      uri: file://inbox
      parameters:
        idempotentStrategy: repository
      steps:
        - to:
            uri: "..."
```

This strategy checks for idempotency by storing the Atom Entry GUID in an `IdempotentRepository`. The strategy defaults a MemoryIdempotentRepository, but the repository can be changes to any subclass of `IdempotentRepository`, using the `idempotentRepository` option.

## Examples

### Consumer Example

In this sample, we poll James Strachan’s blog.

-   Java
    
-   XML
    
-   YAML
    

```java
from("atom://http://macstrac.blogspot.com/feeds/posts/default").to("seda:feeds");
```

```xml
<route>
  <from uri="atom://http://macstrac.blogspot.com/feeds/posts/default"/>
  <to uri="seda:feeds"/>
</route>
```

```yaml
- route:
    from:
      uri: atom://http://macstrac.blogspot.com/feeds/posts/default
      steps:
        - to:
            uri: seda:feeds
```

In this sample, we want to filter only good blogs we like to a SEDA queue. The sample also shows how to set up Camel standalone, not running in any Container or using Spring.